--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 }
 
 body {
-   
+   height: 100vh;
 }
 header {
     background-color: var(--cor1);
@@ -96,6 +96,7 @@ nav {
     text-align: center;
     line-height: 70px;
     padding-top: 10px;
+    font-family: var(--font0);
 }
 nav  > a {
     padding: 18px;
@@ -104,7 +105,7 @@ nav  > a {
     margin-right: 10px;
     
     text-decoration: none;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     
 }
 nav > a:hover {
@@ -124,6 +125,10 @@ nav > a:hover {
     color: white;
     border-radius: 10px;
    box-shadow: 2px 2px 4px black;
+}
+#buttom:hover {
+    background-color: rgba(0, 0, 0, 0.274);
+    transform: scaleY(1.2);
 }
 
 main {
