--- a/style.css
+++ b/style.css
@@ -41,11 +41,9 @@ header {
 .nome {
     color: white;
     font-size: 1.3rem;
+    margin-top: 5px;
 }
 .nome h1 {
-    text-align: center;
-}
-.menu P {
     text-align: center;
 }
 .menu {
