--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ transform: scale(1.1);
 
 main {
 }
- section {
+ .imgfundo {
     display: flex;
     min-height:calc(100vh - 100px);
     align-items: center;
@@ -195,7 +195,7 @@ main {
     .open {
         display: block;
     }
-    section {
+    .imgfundo {
         background: url('img/empty-modern-room-with-furniture.jpg') no-repeat;
         background-size: cover;
     }
